Fix broken css

--- a/calculator.css
+++ b/calculator.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     gap: 1rem;
     width: fit-content;
+    max-width: 18rem;
     padding: 1.2rem;
     border-radius: 0.5rem;
     background-color: blueviolet;
@@ -30,6 +31,7 @@
 .calculator__buttons-grid > .row {
     display: flex;
     gap: 1rem;
+    justify-content: center;
 }
 
 .calculator-button {
